[gd_scene load_steps=4 format=2]

[ext_resource path="res://Sprites/UI/Untitled_Artwork 4.png" type="Texture" id=1]
[ext_resource path="res://fonts/new_dynamicfont.tres" type="DynamicFont" id=2]
[ext_resource path="res://Scripts/skill_btn.gd" type="Script" id=3]

[node name="skill_btn" type="Node2D" groups=[
"extras",
"skill_btns",
]]
z_index = 13
script = ExtResource( 3 )

[node name="Label" type="Label" parent="."]
margin_left = 2.0
margin_top = 2.0
margin_right = 282.0
margin_bottom = 73.0
custom_fonts/font = ExtResource( 2 )
align = 1
valign = 1
autowrap = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="."]
self_modulate = Color( 1, 1, 1, 0 )
margin_right = 284.0
margin_bottom = 76.0
custom_fonts/font = ExtResource( 2 )
text = "Throw"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sprite" type="Sprite" parent="Button"]
self_modulate = Color( 0.0980392, 0.0980392, 0.0980392, 1 )
position = Vector2( 141.638, 37.4749 )
scale = Vector2( 0.47213, 0.246499 )
z_index = -1
texture = ExtResource( 1 )

[node name="outline" type="Sprite" parent="Button/Sprite"]
scale = Vector2( 1.03, 1.1 )
z_index = -1
texture = ExtResource( 1 )
[connection signal="focus_entered" from="Button" to="." method="_on_Button_focus_entered"]
[connection signal="focus_exited" from="Button" to="." method="_on_Button_focus_exited"]
[connection signal="mouse_entered" from="Button" to="." method="_on_Button_focus_entered"]
[connection signal="mouse_exited" from="Button" to="." method="_on_Button_focus_exited"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
